--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "aliasneo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "bower": "^1.7.0",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mongojs": "^2.1.0"
   }
 }
